--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Chirantan Mallick - Front-end Developer & AI Engineer</title>
-    <meta name="description" content="Portfolio of Chirantan Mallick, a final-year BCA student specializing in AI/ML and front-end development. Featuring projects like SalaryScope, SemesterHub, and AI Resume Screener." />
-    
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Clash+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
-    
-    <!-- Vanta.js for 3D background -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/tengbao/vanta/dist/vanta.net.min.js"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5" />
+  <title>Chirantan Mallick - Front-end Developer & AI Engineer</title>
+  <meta name="description"
+    content="Portfolio of Chirantan Mallick, a final-year BCA student specializing in AI/ML and front-end development. Featuring projects like SalaryScope, SemesterHub, and AI Resume Screener." />
+  <meta name="keywords"
+    content="Chirantan Mallick, Front-end Developer, AI Engineer, Machine Learning, React, Portfolio, BCA Student" />
+  <meta name="author" content="Chirantan Mallick" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Chirantan Mallick - Front-end Developer & AI Engineer" />
+  <meta property="og:description" content="Portfolio showcasing AI/ML projects and front-end development expertise" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/assets/images/profile/Chirantan-mallick-hero-image.jpg" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Chirantan Mallick - Front-end Developer & AI Engineer" />
+  <meta name="twitter:description" content="Portfolio showcasing AI/ML projects and front-end development expertise" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="alternate icon" href="/favicon.ico" />
+
+  <!-- Fonts with display=swap for better performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Clash+Display:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+
+  <!-- Preload critical resources -->
+  <link rel="preload" href="/assets/images/profile/Chirantan-mallick-hero-image.jpg" as="image" type="image/jpeg" />
+
+  <!-- Vanta.js for 3D background -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/tengbao/vanta/dist/vanta.net.min.js"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
+  <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
+</body>
+
 </html>
