🔧 Update image URLs to use Cloudinary for better performance and reliability

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Chirantan Mallick - Front-end Developer & AI Engineer" />
   <meta property="og:description" content="Portfolio showcasing AI/ML projects and front-end development expertise" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/assets/images/profile/Chirantan-mallick-hero-image.jpg" />
+  <meta property="og:image" content="https://res.cloudinary.com/dlxybta5a/image/upload/v1754429079/Chirantan-mallick-hero-image_sdw6ld.jpg" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -35,7 +35,7 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
 
   <!-- Preload critical resources -->
-  <link rel="preload" href="/assets/images/profile/Chirantan-mallick-hero-image.jpg" as="image" type="image/jpeg" />
+  <link rel="preload" href="https://res.cloudinary.com/dlxybta5a/image/upload/v1754429079/Chirantan-mallick-hero-image_sdw6ld.jpg" as="image" type="image/jpeg" />
 
   <!-- Vanta.js for 3D background -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
