🔧 Enhance responsiveness and styling across components, including viewport adjustments and overflow handling

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=1.0, maximum-scale=3.0" />
   <title>Chirantan Mallick - Front-end Developer & AI Engineer</title>
   <meta name="description"
     content="Portfolio of Chirantan Mallick, a final-year BCA student specializing in AI/ML and front-end development. Featuring projects like SalaryScope, SemesterHub, and AI Resume Screener." />
