--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=1.0, maximum-scale=3.0" />
-  <title>Chirantan Mallick - Front-end Developer & AI Engineer</title>
+  <title>ChirantanMallick.in</title>
   <meta name="description"
     content="Portfolio of Chirantan Mallick, a final-year BCA student specializing in AI/ML and front-end development. Featuring projects like SalaryScope, SemesterHub, and AI Resume Screener." />
   <meta name="keywords"
@@ -13,7 +13,7 @@
   <meta name="author" content="Chirantan Mallick" />
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Chirantan Mallick - Front-end Developer & AI Engineer" />
+  <meta property="og:title" content="ChirantanMallick.in" />
   <meta property="og:description" content="Portfolio showcasing AI/ML projects and front-end development expertise" />
   <meta property="og:type" content="website" />
   <meta property="og:image"
@@ -35,6 +35,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Clash+Display:wght@400;500;600;700&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Apricots&display=swap" rel="stylesheet">
 
   <!-- Preload critical resources -->
   <link rel="preload"
