🔧 Update logo image in README.md and change favicon format in index.html for consistency and improved performance

--- a/client/index.html
+++ b/client/index.html
@@ -25,8 +25,8 @@
   <meta name="twitter:description" content="Portfolio showcasing AI/ML projects and front-end development expertise" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="alternate icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" href="/assets/fabicon.png" />
+  <link rel="alternate icon" href="/assets/fabicon.png" />
 
   <!-- Fonts with display=swap for better performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
