--- a/client/index.html
+++ b/client/index.html
@@ -25,8 +25,8 @@
   <meta name="twitter:description" content="Portfolio showcasing AI/ML projects and front-end development expertise" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/assets/fabicon.png" />
-  <link rel="alternate icon" href="/assets/fabicon.png" />
+  <link rel="icon" type="image/png"
+    href="https://res.cloudinary.com/dlxybta5a/image/upload/v1754561987/fabicon_tut5nk.png" />
 
   <!-- Fonts with display=swap for better performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
