--- a/client/index.html
+++ b/client/index.html
@@ -17,12 +17,17 @@
   <meta property="og:description" content="Portfolio showcasing AI/ML projects and front-end development expertise" />
   <meta property="og:type" content="website" />
   <meta property="og:image"
-    content="https://res.cloudinary.com/dlxybta5a/image/upload/v1754429079/Chirantan-mallick-hero-image_sdw6ld.jpg" />
+    content="https://res.cloudinary.com/dlxybta5a/image/upload/v1754561987/fabicon_tut5nk.png" />
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
+  <meta property="og:image:type" content="image/png" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Chirantan Mallick - Front-end Developer & AI Engineer" />
   <meta name="twitter:description" content="Portfolio showcasing AI/ML projects and front-end development expertise" />
+  <meta name="twitter:image"
+    content="https://res.cloudinary.com/dlxybta5a/image/upload/v1754561987/fabicon_tut5nk.png" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png"
