--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=1.0, maximum-scale=3.0" />
   <title>ChirantanMallick.in</title>
   <meta name="description"
-    content="Portfolio of Chirantan Mallick, a final-year BCA student specializing in AI/ML and front-end development. Featuring projects like SalaryScope, SemesterHub, and AI Resume Screener." />
+    content="Explore Chirantan Mallick's portfolio - Front-end Developer & AI/ML Engineer. Innovative projects including SalaryScope, SemesterHub & AI Resume Screener. View my work!" />
   <meta name="keywords"
     content="Chirantan Mallick, Front-end Developer, AI Engineer, Machine Learning, React, Portfolio, BCA Student" />
   <meta name="author" content="Chirantan Mallick" />
