🔧 Improve SEO and accessibility: add canonical URL, update meta tags, and implement structured data; enhance sections with ARIA roles and labels for better navigation

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,18 @@
     content="Chirantan Mallick, Front-end Developer, AI Engineer, Machine Learning, React, Portfolio, BCA Student" />
   <meta name="author" content="Chirantan Mallick" />
 
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://chirantan-portfolio.vercel.app/" />
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <meta name="msapplication-TileColor" content="#0ea5e9" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="referrer" content="origin-when-cross-origin" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="google-site-verification" content="placeholder-for-google-search-console" />
+
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="ChirantanMallick.in" />
   <meta property="og:description" content="Portfolio showcasing AI/ML projects and front-end development expertise" />
@@ -47,9 +59,129 @@
     href="https://res.cloudinary.com/dlxybta5a/image/upload/v1754429079/Chirantan-mallick-hero-image_sdw6ld.jpg"
     as="image" type="image/jpeg" />
 
+  <!-- DNS prefetch for external resources -->
+  <link rel="dns-prefetch" href="//res.cloudinary.com">
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+  <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+  <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
+
   <!-- Vanta.js for 3D background -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/tengbao/vanta/dist/vanta.net.min.js"></script>
+
+  <!-- Structured Data (JSON-LD) for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Chirantan Mallick",
+    "jobTitle": "Front-end Developer & AI/ML Engineer",
+    "description": "BCA student specializing in AI/ML and front-end development with expertise in React, Python, and machine learning technologies.",
+    "url": "https://chirantan-portfolio.vercel.app/",
+    "image": "https://res.cloudinary.com/dlxybta5a/image/upload/v1754429079/Chirantan-mallick-hero-image_sdw6ld.jpg",
+    "sameAs": [
+      "https://github.com/SpicychieF05",
+      "https://linkedin.com/in/chirantan-mallick"
+    ],
+    "alumniOf": {
+      "@type": "EducationalOrganization",
+      "name": "Seacom Skills University"
+    },
+    "knowsAbout": [
+      "JavaScript",
+      "React",
+      "Python",
+      "Machine Learning",
+      "Artificial Intelligence",
+      "Frontend Development",
+      "UI/UX Design",
+      "Firebase",
+      "Tailwind CSS"
+    ],
+    "hasCredential": [
+      {
+        "@type": "EducationalOccupationalCredential",
+        "name": "AWS Forge Certificate",
+        "credentialCategory": "Cloud Computing"
+      },
+      {
+        "@type": "EducationalOccupationalCredential",
+        "name": "Google Gen AI Certificate",
+        "credentialCategory": "Artificial Intelligence"
+      },
+      {
+        "@type": "EducationalOccupationalCredential",
+        "name": "IBM Design Certificate",
+        "credentialCategory": "Design Thinking"
+      }
+    ],
+    "worksFor": [
+      {
+        "@type": "Organization",
+        "name": "Microsoft-SAP (TechSaksham Program)",
+        "description": "AI Intern developing resume screening systems"
+      }
+    ]
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Chirantan Mallick Portfolio",
+    "description": "Portfolio showcasing AI/ML projects and front-end development expertise",
+    "url": "https://chirantan-portfolio.vercel.app/",
+    "author": {
+      "@type": "Person",
+      "name": "Chirantan Mallick"
+    },
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://chirantan-portfolio.vercel.app/#projects",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CreativeWork",
+    "@id": "https://chirantan-portfolio.vercel.app/#projects",
+    "name": "Featured Projects Portfolio",
+    "description": "Collection of AI/ML and web development projects including SalaryScope, SemesterHub, and AI Resume Screener",
+    "creator": {
+      "@type": "Person",
+      "name": "Chirantan Mallick"
+    },
+    "hasPart": [
+      {
+        "@type": "SoftwareApplication",
+        "name": "SalaryScope",
+        "description": "AI-powered salary prediction platform with 96% accuracy using machine learning algorithms",
+        "applicationCategory": "Machine Learning Application",
+        "operatingSystem": "Web",
+        "url": "https://salaryscope.streamlit.app/"
+      },
+      {
+        "@type": "SoftwareApplication",
+        "name": "SemesterHub",
+        "description": "Academic resource sharing platform with authentication and admin moderation",
+        "applicationCategory": "Educational Platform",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "SoftwareApplication",
+        "name": "AI Resume Screener",
+        "description": "Intelligent resume screening system using NLP and machine learning for recruitment optimization",
+        "applicationCategory": "HR Technology",
+        "operatingSystem": "Web"
+      }
+    ]
+  }
+  </script>
 </head>
 
 <body>
