Update all SEO URLs to correct domain: chirantanmallick.vercel.app

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="Chirantan Mallick" />
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://chirantan-portfolio.vercel.app/" />
+  <link rel="canonical" href="https://chirantanmallick.vercel.app/" />
 
   <!-- Additional SEO Meta Tags -->
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
@@ -78,7 +78,7 @@
     "name": "Chirantan Mallick",
     "jobTitle": "Front-end Developer & AI/ML Engineer",
     "description": "BCA student specializing in AI/ML and front-end development with expertise in React, Python, and machine learning technologies.",
-    "url": "https://chirantan-portfolio.vercel.app/",
+    "url": "https://chirantanmallick.vercel.app/",
     "image": "https://res.cloudinary.com/dlxybta5a/image/upload/v1754429079/Chirantan-mallick-hero-image_sdw6ld.jpg",
     "sameAs": [
       "https://github.com/SpicychieF05",
@@ -132,14 +132,14 @@
     "@type": "WebSite",
     "name": "Chirantan Mallick Portfolio",
     "description": "Portfolio showcasing AI/ML projects and front-end development expertise",
-    "url": "https://chirantan-portfolio.vercel.app/",
+    "url": "https://chirantanmallick.vercel.app/",
     "author": {
       "@type": "Person",
       "name": "Chirantan Mallick"
     },
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "https://chirantan-portfolio.vercel.app/#projects",
+      "target": "https://chirantanmallick.vercel.app/#projects",
       "query-input": "required name=search_term_string"
     }
   }
@@ -149,7 +149,7 @@
   {
     "@context": "https://schema.org",
     "@type": "CreativeWork",
-    "@id": "https://chirantan-portfolio.vercel.app/#projects",
+    "@id": "https://chirantanmallick.vercel.app/#projects",
     "name": "Featured Projects Portfolio",
     "description": "Collection of AI/ML and web development projects including SalaryScope, SemesterHub, and AI Resume Screener",
     "creator": {
