--- a/client/index.html
+++ b/client/index.html
@@ -67,8 +67,8 @@
   <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
 
   <!-- Vanta.js for 3D background -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/tengbao/vanta/dist/vanta.net.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/gh/tengbao/vanta/dist/vanta.net.min.js"></script>
 
   <!-- Structured Data (JSON-LD) for SEO -->
   <script type="application/ld+json">
